tests/transpiler/x/py/sort_stable.py
# Generated by Mochi transpiler v0.10.31 on 2025-07-20 15:06 +0700
items = [{"n": 1, "v": "a"}, {"n": 1, "v": "b"}, {"n": 2, "v": "c"}]
result = sorted([i["v"] for i in items], key=lambda i: i["n"])
print(result)
